kubernetes/headscale/manifest/addl/webui/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: headscale-ui
  namespace: my-headscale
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: hs.local.127.0.0.1.sslip.io
    http:
     paths:
     - path: /admin
       pathType: Prefix
       backend:
        service:
         name: headscale-ui
         port:
          number: 5000
  tls: []
